ocaml/minocaml6/minParser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : signature EOF

   3  toplevel_phrase : top_structure SEMISEMI
   4                  | EOF

   5  top_structure : seq_expr
   6                | top_structure_tail

   7  top_structure_tail :
   8                     | structure_item top_structure_tail

   9  use_file : use_file_tail
  10           | seq_expr use_file_tail

  11  use_file_tail : EOF
  12                | SEMISEMI EOF
  13                | SEMISEMI seq_expr use_file_tail
  14                | SEMISEMI structure_item use_file_tail
  15                | structure_item use_file_tail

  16  parse_core_type :

  17  parse_expression : seq_expr EOF

  18  parse_pattern : pattern EOF

  19  structure : seq_expr structure_tail
  20            | structure_tail

  21  structure_tail :
  22                 | SEMISEMI structure
  23                 | structure_item structure_tail

  24  structure_item : LET rec_flag let_bindings
  25                 | open_statement

  26  signature :

  27  open_statement : OPEN mod_longident

  28  seq_expr : expr
  29           | expr SEMI
  30           | expr SEMI seq_expr

  31  labeled_simple_pattern : LABEL simple_pattern
  32                         | simple_pattern

  33  expr : simple_expr
  34       | simple_expr simple_labeled_expr_list
  35       | LET rec_flag let_bindings_no_attrs IN seq_expr
  36       | expr_comma_list
  37       | constr_longident simple_expr
  38       | IF seq_expr THEN expr ELSE expr
  39       | IF seq_expr THEN expr
  40       | expr INFIXOP0 expr
  41       | expr INFIXOP1 expr
  42       | expr INFIXOP2 expr
  43       | expr INFIXOP3 expr
  44       | expr INFIXOP4 expr
  45       | expr PLUS expr
  46       | expr PLUSDOT expr
  47       | expr PLUSEQ expr
  48       | expr MINUS expr
  49       | expr MINUSDOT expr
  50       | expr STAR expr
  51       | expr PERCENT expr
  52       | expr EQUAL expr
  53       | expr LESS expr
  54       | expr GREATER expr
  55       | expr OR expr
  56       | expr BARBAR expr
  57       | expr AMPERSAND expr
  58       | expr AMPERAMPER expr
  59       | expr COLONEQUAL expr
  60       | subtractive expr
  61       | additive expr
  62       | simple_expr DOT label_longident LESSMINUS expr
  63       | simple_expr DOT LPAREN seq_expr RPAREN LESSMINUS expr
  64       | label LESSMINUS expr
  65       | ASSERT simple_expr

  66  simple_expr : val_longident
  67              | constant
  68              | constr_longident
  69              | LPAREN seq_expr RPAREN
  70              | mod_longident DOT LPAREN seq_expr RPAREN
  71              | simple_expr DOT LPAREN seq_expr RPAREN
  72              | PREFIXOP simple_expr
  73              | BANG simple_expr

  74  simple_labeled_expr_list : labeled_simple_expr
  75                           | simple_labeled_expr_list labeled_simple_expr

  76  labeled_simple_expr : simple_expr
  77                      | label_expr

  78  label_expr : LABEL simple_expr

  79  let_bindings : let_binding

  80  let_bindings_no_attrs : let_bindings

  81  let_binding : let_binding_

  82  let_binding_ : val_ident fun_binding
  83               | pattern EQUAL seq_expr

  84  fun_binding : EQUAL seq_expr
  85              | labeled_simple_pattern fun_binding

  86  expr_comma_list : expr_comma_list COMMA expr
  87                  | expr COMMA expr

  88  pattern : simple_pattern
  89          | pattern AS val_ident
  90          | pattern_comma_list
  91          | constr_longident pattern
  92          | pattern BAR pattern
  93          | EXCEPTION pattern

  94  simple_pattern : val_ident
  95                 | simple_pattern_not_ident

  96  simple_pattern_not_ident : UNDERSCORE
  97                           | signed_constant
  98                           | signed_constant DOTDOT signed_constant
  99                           | constr_longident
 100                           | LBRACE lbl_pattern_list RBRACE
 101                           | LPAREN pattern RPAREN

 102  pattern_comma_list : pattern_comma_list COMMA pattern
 103                     | pattern COMMA pattern

 104  lbl_pattern_list : lbl_pattern
 105                   | lbl_pattern SEMI
 106                   | lbl_pattern SEMI UNDERSCORE opt_semi
 107                   | lbl_pattern SEMI lbl_pattern_list

 108  lbl_pattern : label_longident EQUAL pattern
 109              | label_longident

 110  label : LIDENT

 111  constant : INT
 112           | CHAR
 113           | STRING
 114           | FLOAT

 115  signed_constant : constant
 116                  | MINUS INT
 117                  | MINUS FLOAT
 118                  | PLUS INT
 119                  | PLUS FLOAT

 120  val_ident : LIDENT

 121  val_longident : val_ident
 122                | mod_longident DOT val_ident

 123  constr_longident : mod_longident
 124                   | LPAREN RPAREN
 125                   | FALSE
 126                   | TRUE

 127  label_longident : LIDENT
 128                  | mod_longident DOT LIDENT

 129  mod_longident : UIDENT
 130                | mod_longident DOT UIDENT

 131  rec_flag :
 132           | REC

 133  opt_semi :
 134           | SEMI

 135  subtractive : MINUS
 136              | MINUSDOT

 137  additive : PLUS
 138           | PLUSDOT

 139  %entry% : '\001' implementation
 140          | '\002' interface
 141          | '\003' toplevel_phrase
 142          | '\004' use_file
 143          | '\005' parse_core_type
 144          | '\006' parse_expression
 145          | '\007' parse_pattern

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	'\006'  shift 6
	'\007'  shift 7
	.  error

	%entry%  goto 8


state 1
	%entry% : '\001' . implementation  (139)
	structure_tail : .  (21)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 16
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	OPEN  shift 21
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	SEMISEMI  shift 25
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	EOF  reduce 21

	implementation  goto 29
	structure  goto 30
	seq_expr  goto 31
	structure_item  goto 32
	structure_tail  goto 33
	open_statement  goto 34
	mod_longident  goto 35
	expr  goto 36
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 2
	%entry% : '\002' . interface  (140)
	signature : .  (26)

	.  reduce 26

	interface  goto 46
	signature  goto 47


state 3
	%entry% : '\003' . toplevel_phrase  (141)
	top_structure_tail : .  (7)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	EOF  shift 48
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 16
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	OPEN  shift 21
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	SEMISEMI  reduce 7

	toplevel_phrase  goto 49
	top_structure  goto 50
	seq_expr  goto 51
	top_structure_tail  goto 52
	structure_item  goto 53
	open_statement  goto 34
	mod_longident  goto 35
	expr  goto 36
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 4
	%entry% : '\004' . use_file  (142)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	EOF  shift 54
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 16
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	OPEN  shift 21
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	SEMISEMI  shift 55
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	use_file  goto 56
	seq_expr  goto 57
	structure_item  goto 58
	use_file_tail  goto 59
	open_statement  goto 34
	mod_longident  goto 35
	expr  goto 36
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 5
	%entry% : '\005' . parse_core_type  (143)
	parse_core_type : .  (16)

	.  reduce 16

	parse_core_type  goto 60


state 6
	%entry% : '\006' . parse_expression  (144)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 61
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	parse_expression  goto 62
	seq_expr  goto 63
	mod_longident  goto 35
	expr  goto 36
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 7
	%entry% : '\007' . parse_pattern  (145)

	CHAR  shift 11
	EXCEPTION  shift 64
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 15
	LBRACE  shift 65
	LIDENT  shift 66
	LPAREN  shift 67
	MINUS  shift 68
	PLUS  shift 69
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	UNDERSCORE  shift 70
	.  error

	parse_pattern  goto 71
	pattern  goto 72
	mod_longident  goto 73
	simple_pattern  goto 74
	constr_longident  goto 75
	constant  goto 76
	val_ident  goto 77
	pattern_comma_list  goto 78
	simple_pattern_not_ident  goto 79
	signed_constant  goto 80


state 8
	$accept : %entry% . $end  (0)

	$end  accept


state 9
	expr : ASSERT . simple_expr  (65)

	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 15
	LIDENT  shift 66
	LPAREN  shift 18
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	mod_longident  goto 35
	simple_expr  goto 81
	constr_longident  goto 82
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 10
	simple_expr : BANG . simple_expr  (73)

	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 15
	LIDENT  shift 66
	LPAREN  shift 18
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	mod_longident  goto 35
	simple_expr  goto 83
	constr_longident  goto 82
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 11
	constant : CHAR .  (112)

	.  reduce 112


state 12
	constr_longident : FALSE .  (125)

	.  reduce 125


state 13
	constant : FLOAT .  (114)

	.  reduce 114


state 14
	expr : IF . seq_expr THEN expr ELSE expr  (38)
	expr : IF . seq_expr THEN expr  (39)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 61
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	seq_expr  goto 84
	mod_longident  goto 35
	expr  goto 36
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 15
	constant : INT .  (111)

	.  reduce 111


state 16
	structure_item : LET . rec_flag let_bindings  (24)
	expr : LET . rec_flag let_bindings_no_attrs IN seq_expr  (35)
	rec_flag : .  (131)

	REC  shift 85
	CHAR  reduce 131
	EXCEPTION  reduce 131
	FALSE  reduce 131
	FLOAT  reduce 131
	INT  reduce 131
	LBRACE  reduce 131
	LIDENT  reduce 131
	LPAREN  reduce 131
	MINUS  reduce 131
	PLUS  reduce 131
	STRING  reduce 131
	TRUE  reduce 131
	UIDENT  reduce 131
	UNDERSCORE  reduce 131

	rec_flag  goto 86


state 17
	label : LIDENT .  (110)
	val_ident : LIDENT .  (120)

	AMPERAMPER  reduce 120
	AMPERSAND  reduce 120
	BANG  reduce 120
	BARBAR  reduce 120
	CHAR  reduce 120
	COLONEQUAL  reduce 120
	COMMA  reduce 120
	DOT  reduce 120
	ELSE  reduce 120
	EOF  reduce 120
	EQUAL  reduce 120
	FALSE  reduce 120
	FLOAT  reduce 120
	GREATER  reduce 120
	IN  reduce 120
	INFIXOP0  reduce 120
	INFIXOP1  reduce 120
	INFIXOP2  reduce 120
	INFIXOP3  reduce 120
	INFIXOP4  reduce 120
	INT  reduce 120
	LABEL  reduce 120
	LESS  reduce 120
	LESSMINUS  reduce 110
	LET  reduce 120
	LIDENT  reduce 120
	LPAREN  reduce 120
	MINUS  reduce 120
	MINUSDOT  reduce 120
	OPEN  reduce 120
	OR  reduce 120
	PERCENT  reduce 120
	PLUS  reduce 120
	PLUSDOT  reduce 120
	PLUSEQ  reduce 120
	PREFIXOP  reduce 120
	RPAREN  reduce 120
	SEMI  reduce 120
	SEMISEMI  reduce 120
	STAR  reduce 120
	STRING  reduce 120
	THEN  reduce 120
	TRUE  reduce 120
	UIDENT  reduce 120


state 18
	simple_expr : LPAREN . seq_expr RPAREN  (69)
	constr_longident : LPAREN . RPAREN  (124)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 61
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	RPAREN  shift 87
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	seq_expr  goto 88
	mod_longident  goto 35
	expr  goto 36
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 19
	subtractive : MINUS .  (135)

	.  reduce 135


state 20
	subtractive : MINUSDOT .  (136)

	.  reduce 136


state 21
	open_statement : OPEN . mod_longident  (27)

	UIDENT  shift 28
	.  error

	mod_longident  goto 89


state 22
	additive : PLUS .  (137)

	.  reduce 137


state 23
	additive : PLUSDOT .  (138)

	.  reduce 138


state 24
	simple_expr : PREFIXOP . simple_expr  (72)

	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 15
	LIDENT  shift 66
	LPAREN  shift 18
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	mod_longident  goto 35
	simple_expr  goto 90
	constr_longident  goto 82
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 25
	structure_tail : SEMISEMI . structure  (22)
	structure_tail : .  (21)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 16
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	OPEN  shift 21
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	SEMISEMI  shift 25
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	EOF  reduce 21

	structure  goto 91
	seq_expr  goto 31
	structure_item  goto 32
	structure_tail  goto 33
	open_statement  goto 34
	mod_longident  goto 35
	expr  goto 36
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 26
	constant : STRING .  (113)

	.  reduce 113


state 27
	constr_longident : TRUE .  (126)

	.  reduce 126


state 28
	mod_longident : UIDENT .  (129)

	.  reduce 129


state 29
	%entry% : '\001' implementation .  (139)

	.  reduce 139


state 30
	implementation : structure . EOF  (1)

	EOF  shift 92
	.  error


state 31
	structure : seq_expr . structure_tail  (19)
	structure_tail : .  (21)

	LET  shift 93
	OPEN  shift 21
	SEMISEMI  shift 25
	EOF  reduce 21

	structure_item  goto 32
	structure_tail  goto 94
	open_statement  goto 34


state 32
	structure_tail : structure_item . structure_tail  (23)
	structure_tail : .  (21)

	LET  shift 93
	OPEN  shift 21
	SEMISEMI  shift 25
	EOF  reduce 21

	structure_item  goto 32
	structure_tail  goto 95
	open_statement  goto 34


state 33
	structure : structure_tail .  (20)

	.  reduce 20


state 34
	structure_item : open_statement .  (25)

	.  reduce 25


state 35
	simple_expr : mod_longident . DOT LPAREN seq_expr RPAREN  (70)
	val_longident : mod_longident . DOT val_ident  (122)
	constr_longident : mod_longident .  (123)
	mod_longident : mod_longident . DOT UIDENT  (130)

	DOT  shift 96
	AMPERAMPER  reduce 123
	AMPERSAND  reduce 123
	BANG  reduce 123
	BARBAR  reduce 123
	CHAR  reduce 123
	COLONEQUAL  reduce 123
	COMMA  reduce 123
	ELSE  reduce 123
	EOF  reduce 123
	EQUAL  reduce 123
	FALSE  reduce 123
	FLOAT  reduce 123
	GREATER  reduce 123
	IN  reduce 123
	INFIXOP0  reduce 123
	INFIXOP1  reduce 123
	INFIXOP2  reduce 123
	INFIXOP3  reduce 123
	INFIXOP4  reduce 123
	INT  reduce 123
	LABEL  reduce 123
	LESS  reduce 123
	LET  reduce 123
	LIDENT  reduce 123
	LPAREN  reduce 123
	MINUS  reduce 123
	MINUSDOT  reduce 123
	OPEN  reduce 123
	OR  reduce 123
	PERCENT  reduce 123
	PLUS  reduce 123
	PLUSDOT  reduce 123
	PLUSEQ  reduce 123
	PREFIXOP  reduce 123
	RPAREN  reduce 123
	SEMI  reduce 123
	SEMISEMI  reduce 123
	STAR  reduce 123
	STRING  reduce 123
	THEN  reduce 123
	TRUE  reduce 123
	UIDENT  reduce 123


state 36
	seq_expr : expr .  (28)
	seq_expr : expr . SEMI  (29)
	seq_expr : expr . SEMI seq_expr  (30)
	expr : expr . INFIXOP0 expr  (40)
	expr : expr . INFIXOP1 expr  (41)
	expr : expr . INFIXOP2 expr  (42)
	expr : expr . INFIXOP3 expr  (43)
	expr : expr . INFIXOP4 expr  (44)
	expr : expr . PLUS expr  (45)
	expr : expr . PLUSDOT expr  (46)
	expr : expr . PLUSEQ expr  (47)
	expr : expr . MINUS expr  (48)
	expr : expr . MINUSDOT expr  (49)
	expr : expr . STAR expr  (50)
	expr : expr . PERCENT expr  (51)
	expr : expr . EQUAL expr  (52)
	expr : expr . LESS expr  (53)
	expr : expr . GREATER expr  (54)
	expr : expr . OR expr  (55)
	expr : expr . BARBAR expr  (56)
	expr : expr . AMPERSAND expr  (57)
	expr : expr . AMPERAMPER expr  (58)
	expr : expr . COLONEQUAL expr  (59)
	expr_comma_list : expr . COMMA expr  (87)

	AMPERAMPER  shift 97
	AMPERSAND  shift 98
	BARBAR  shift 99
	COLONEQUAL  shift 100
	COMMA  shift 101
	EQUAL  shift 102
	GREATER  shift 103
	INFIXOP0  shift 104
	INFIXOP1  shift 105
	INFIXOP2  shift 106
	INFIXOP3  shift 107
	INFIXOP4  shift 108
	LESS  shift 109
	MINUS  shift 110
	MINUSDOT  shift 111
	OR  shift 112
	PERCENT  shift 113
	PLUS  shift 114
	PLUSDOT  shift 115
	PLUSEQ  shift 116
	SEMI  shift 117
	STAR  shift 118
	ELSE  reduce 28
	EOF  reduce 28
	IN  reduce 28
	LET  reduce 28
	OPEN  reduce 28
	RPAREN  reduce 28
	SEMISEMI  reduce 28
	THEN  reduce 28


state 37
	expr : simple_expr .  (33)
	expr : simple_expr . simple_labeled_expr_list  (34)
	expr : simple_expr . DOT label_longident LESSMINUS expr  (62)
	expr : simple_expr . DOT LPAREN seq_expr RPAREN LESSMINUS expr  (63)
	simple_expr : simple_expr . DOT LPAREN seq_expr RPAREN  (71)

	BANG  shift 10
	CHAR  shift 11
	DOT  shift 119
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 15
	LABEL  shift 120
	LIDENT  shift 66
	LPAREN  shift 18
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	AMPERAMPER  reduce 33
	AMPERSAND  reduce 33
	BARBAR  reduce 33
	COLONEQUAL  reduce 33
	COMMA  reduce 33
	ELSE  reduce 33
	EOF  reduce 33
	EQUAL  reduce 33
	GREATER  reduce 33
	IN  reduce 33
	INFIXOP0  reduce 33
	INFIXOP1  reduce 33
	INFIXOP2  reduce 33
	INFIXOP3  reduce 33
	INFIXOP4  reduce 33
	LESS  reduce 33
	LET  reduce 33
	MINUS  reduce 33
	MINUSDOT  reduce 33
	OPEN  reduce 33
	OR  reduce 33
	PERCENT  reduce 33
	PLUS  reduce 33
	PLUSDOT  reduce 33
	PLUSEQ  reduce 33
	RPAREN  reduce 33
	SEMI  reduce 33
	SEMISEMI  reduce 33
	STAR  reduce 33
	THEN  reduce 33

	mod_longident  goto 35
	simple_expr  goto 121
	simple_labeled_expr_list  goto 122
	constr_longident  goto 82
	val_longident  goto 43
	constant  goto 44
	labeled_simple_expr  goto 123
	label_expr  goto 124
	val_ident  goto 45


state 38
	expr : expr_comma_list .  (36)
	expr_comma_list : expr_comma_list . COMMA expr  (86)

	COMMA  shift 125
	AMPERAMPER  reduce 36
	AMPERSAND  reduce 36
	BARBAR  reduce 36
	COLONEQUAL  reduce 36
	ELSE  reduce 36
	EOF  reduce 36
	EQUAL  reduce 36
	GREATER  reduce 36
	IN  reduce 36
	INFIXOP0  reduce 36
	INFIXOP1  reduce 36
	INFIXOP2  reduce 36
	INFIXOP3  reduce 36
	INFIXOP4  reduce 36
	LESS  reduce 36
	LET  reduce 36
	MINUS  reduce 36
	MINUSDOT  reduce 36
	OPEN  reduce 36
	OR  reduce 36
	PERCENT  reduce 36
	PLUS  reduce 36
	PLUSDOT  reduce 36
	PLUSEQ  reduce 36
	RPAREN  reduce 36
	SEMI  reduce 36
	SEMISEMI  reduce 36
	STAR  reduce 36
	THEN  reduce 36


state 39
	expr : constr_longident . simple_expr  (37)
	simple_expr : constr_longident .  (68)

	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 15
	LIDENT  shift 66
	LPAREN  shift 18
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	AMPERAMPER  reduce 68
	AMPERSAND  reduce 68
	BARBAR  reduce 68
	COLONEQUAL  reduce 68
	COMMA  reduce 68
	DOT  reduce 68
	ELSE  reduce 68
	EOF  reduce 68
	EQUAL  reduce 68
	GREATER  reduce 68
	IN  reduce 68
	INFIXOP0  reduce 68
	INFIXOP1  reduce 68
	INFIXOP2  reduce 68
	INFIXOP3  reduce 68
	INFIXOP4  reduce 68
	LABEL  reduce 68
	LESS  reduce 68
	LET  reduce 68
	MINUS  reduce 68
	MINUSDOT  reduce 68
	OPEN  reduce 68
	OR  reduce 68
	PERCENT  reduce 68
	PLUS  reduce 68
	PLUSDOT  reduce 68
	PLUSEQ  reduce 68
	RPAREN  reduce 68
	SEMI  reduce 68
	SEMISEMI  reduce 68
	STAR  reduce 68
	THEN  reduce 68

	mod_longident  goto 35
	simple_expr  goto 126
	constr_longident  goto 82
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 40
	expr : subtractive . expr  (60)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 61
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	mod_longident  goto 35
	expr  goto 127
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 41
	expr : additive . expr  (61)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 61
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	mod_longident  goto 35
	expr  goto 128
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 42
	expr : label . LESSMINUS expr  (64)

	LESSMINUS  shift 129
	.  error


state 43
	simple_expr : val_longident .  (66)

	.  reduce 66


state 44
	simple_expr : constant .  (67)

	.  reduce 67


state 45
	val_longident : val_ident .  (121)

	.  reduce 121


state 46
	%entry% : '\002' interface .  (140)

	.  reduce 140


state 47
	interface : signature . EOF  (2)

	EOF  shift 130
	.  error


state 48
	toplevel_phrase : EOF .  (4)

	.  reduce 4


state 49
	%entry% : '\003' toplevel_phrase .  (141)

	.  reduce 141


state 50
	toplevel_phrase : top_structure . SEMISEMI  (3)

	SEMISEMI  shift 131
	.  error


state 51
	top_structure : seq_expr .  (5)

	.  reduce 5


state 52
	top_structure : top_structure_tail .  (6)

	.  reduce 6


state 53
	top_structure_tail : structure_item . top_structure_tail  (8)
	top_structure_tail : .  (7)

	LET  shift 93
	OPEN  shift 21
	SEMISEMI  reduce 7

	top_structure_tail  goto 132
	structure_item  goto 53
	open_statement  goto 34


state 54
	use_file_tail : EOF .  (11)

	.  reduce 11


state 55
	use_file_tail : SEMISEMI . EOF  (12)
	use_file_tail : SEMISEMI . seq_expr use_file_tail  (13)
	use_file_tail : SEMISEMI . structure_item use_file_tail  (14)

	ASSERT  shift 9
	BANG  shift 10
	CHAR  shift 11
	EOF  shift 133
	FALSE  shift 12
	FLOAT  shift 13
	IF  shift 14
	INT  shift 15
	LET  shift 16
	LIDENT  shift 17
	LPAREN  shift 18
	MINUS  shift 19
	MINUSDOT  shift 20
	OPEN  shift 21
	PLUS  shift 22
	PLUSDOT  shift 23
	PREFIXOP  shift 24
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	.  error

	seq_expr  goto 134
	structure_item  goto 135
	open_statement  goto 34
	mod_longident  goto 35
	expr  goto 36
	simple_expr  goto 37
	expr_comma_list  goto 38
	constr_longident  goto 39
	subtractive  goto 40
	additive  goto 41
	label  goto 42
	val_longident  goto 43
	constant  goto 44
	val_ident  goto 45


state 56
	%entry% : '\004' use_file .  (142)

	.  reduce 142


state 57
	use_file : seq_expr . use_file_tail  (10)

	EOF  shift 54
	LET  shift 93
	OPEN  shift 21
	SEMISEMI  shift 55
	.  error

	structure_item  goto 58
	use_file_tail  goto 136
	open_statement  goto 34


state 58
	use_file_tail : structure_item . use_file_tail  (15)

	EOF  shift 54
	LET  shift 93
	OPEN  shift 21
	SEMISEMI  shift 55
	.  error

	structure_item  goto 58
	use_file_tail  goto 137
	open_statement  goto 34


state 59
	use_file : use_file_tail .  (9)

	.  reduce 9


state 60
	%entry% : '\005' parse_core_type .  (143)

	.  reduce 143


state 61
	expr : LET . rec_flag let_bindings_no_attrs IN seq_expr  (35)
	rec_flag : .  (131)

	REC  shift 85
	CHAR  reduce 131
	EXCEPTION  reduce 131
	FALSE  reduce 131
	FLOAT  reduce 131
	INT  reduce 131
	LBRACE  reduce 131
	LIDENT  reduce 131
	LPAREN  reduce 131
	MINUS  reduce 131
	PLUS  reduce 131
	STRING  reduce 131
	TRUE  reduce 131
	UIDENT  reduce 131
	UNDERSCORE  reduce 131

	rec_flag  goto 138


state 62
	%entry% : '\006' parse_expression .  (144)

	.  reduce 144


state 63
	parse_expression : seq_expr . EOF  (17)

	EOF  shift 139
	.  error


state 64
	pattern : EXCEPTION . pattern  (93)

	CHAR  shift 11
	EXCEPTION  shift 64
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 15
	LBRACE  shift 65
	LIDENT  shift 66
	LPAREN  shift 67
	MINUS  shift 68
	PLUS  shift 69
	STRING  shift 26
	TRUE  shift 27
	UIDENT  shift 28
	UNDERSCORE  shift 70
	.  error

	pattern  goto 140
	mod_longident  goto 73
	simple_pattern  goto 74
	constr_longident  goto 75
	constant  goto 76
	val_ident  goto 77
	pattern_comma_list  goto 78
	simple_pattern_not_ident  goto 79
	signed_constant  goto 80


state 65
	simple_pattern_not_ident : LBRACE . lbl_pattern_list RBRACE  (100)
